--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lodash.has": "^4.5.2",
     "lodash.isarray": "^4.0.0",
     "lodash.isempty": "^4.4.0",
+    "lodash.keys": "^4.2.0",
     "lodash.merge": "^4.6.0",
     "lodash.mergewith": "^4.6.0",
     "lodash.remove": "^4.7.0",
+    "lodash.values": "^4.3.0",
     "react": "^15.3.2",
     "react-addons-perf": "^15.3.2",
     "react-dom": "^15.3.1",
