--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3": "^4.2.4",
     "dsv-loader": "^1.1.0",
     "express": "^4.13.4",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.has": "^4.5.2",
     "lodash.isarray": "^4.0.0",
     "lodash.isempty": "^4.4.0",
@@ -14,6 +15,7 @@
     "lodash.merge": "^4.6.0",
     "lodash.mergewith": "^4.6.0",
     "lodash.remove": "^4.7.0",
+    "lodash.sortby": "^4.7.0",
     "lodash.values": "^4.3.0",
     "react": "^15.3.2",
     "react-addons-perf": "^15.3.2",
