--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash.remove": "^4.7.0",
     "lodash.sortby": "^4.7.0",
     "lodash.values": "^4.3.0",
+    "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-addons-perf": "^15.3.2",
     "react-dom": "^15.3.1",
