--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
+    "redis": "^2.6.2",
     "redux": "~3.6",
     "redux-router": "^2.1.2",
     "serve-static": "^1.10.2",
     "skeleton-css": "^2.0.4",
+    "socket.io": "^1.5.0",
     "stylus": "^0.54.5",
     "webpack-dev-server": "^1.16.1"
   },
